--- a/.github/workflows/pnl-ci-docs.yml
+++ b/.github/workflows/pnl-ci-docs.yml
@@ -21,15 +21,13 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ['3.7', '3.8', '3.9', '3.10', '3.11', '3.12']
+        python-version: ['3.8', '3.9', '3.10', '3.11', '3.12']
         os: [ubuntu-latest, macos-latest, windows-latest]
         pnl-version: ${{ (github.event_name == 'push') && fromJSON('["head"]') || fromJSON('["head", "base"]') }}
         exclude:
           - os: macos-latest
             pnl-version: 'base'
           - os: windows-latest
-            pnl-version: 'base'
-          - python-version: '3.7'
             pnl-version: 'base'
           - python-version: '3.8'
             pnl-version: 'base'
@@ -39,14 +37,6 @@ jobs:
             pnl-version: 'base'
           - python-version: '3.12'
             pnl-version: 'base'
-
-            # Python 3.7 x64 on macos-14 (arm64) images is broken [0]
-            # and arm64 version is not available [1].
-            # Restrict python 3.7 macos runs to macos-13
-            # [0] https://github.com/actions/setup-python/issues/855
-            # [1] https://github.com/actions/setup-python/issues/856
-          - python-version: '3.7'
-            os: macos-latest
 
     outputs:
       on_master: ${{ steps.on_master.outputs.on-branch }}
@@ -80,9 +70,7 @@ jobs:
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v5
       with:
-        # Block python3.7.17 on macos. see:
-        # https://github.com/actions/setup-python/issues/682
-        python-version: ${{ (matrix.os == 'macos-latest' && matrix.python-version == '3.7') && '3.7.16' || matrix.python-version }}
+        python-version: ${{ matrix.python-version }}
 
     - name: Get pip cache location
       shell: bash
