--- a/.github/actions/install-pnl/action.yml
+++ b/.github/actions/install-pnl/action.yml
@@ -69,6 +69,8 @@ runs:
           echo "pillow < 10.0.0" >> env_constraints.txt
           # pandas >= 2.1.0 doesn't provide win32 wheel
           echo "pandas < 2.1.0" >> env_constraints.txt
+          # llvmlite >= 0.42.0 doesn't provide win32 wheel
+          echo "llvmlite < 0.42.0" >> env_constraints.txt
         fi
 
     - name: Install updated package
