ci: test-release: add matrix.dist to test result artifact
avoid duplication

--- a/.github/workflows/test-release.yml
+++ b/.github/workflows/test-release.yml
@@ -128,7 +128,7 @@ jobs:
     - name: Upload test results
       uses: actions/upload-artifact@v4
       with:
-        name: test-results-${{ matrix.os }}-${{ matrix.python-version }}
+        name: test-results-${{ matrix.os }}-${{ matrix.python-version }}-${{ matrix.dist }}
         path: tests_out.xml
         retention-days: 30
       if: success() || failure()
