--- a/.github/workflows/test-release.yml
+++ b/.github/workflows/test-release.yml
@@ -72,6 +72,11 @@ jobs:
         python-version: [3.7, 3.8, 3.9, '3.10', 3.11, 3.12]
         os: [ubuntu-latest, macos-latest, windows-latest]
         dist: [wheel, sdist]
+        exclude:
+          # 3.7 is broken on macos-11,
+          # https://github.com/actions/virtual-environments/issues/4230
+          - python-version: '3.7'
+            os: macos-latest
 
     runs-on: ${{ matrix.os }}
     needs: [create-python-dist]
