--- a/setup.cfg
+++ b/setup.cfg
@@ -69,7 +69,7 @@ xfail_strict = True
 
 filterwarnings =
 	error::SyntaxWarning
-	error:Creating an ndarray from ragged nested sequences \(which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes\) is deprecated.*:numpy.VisibleDeprecationWarning
+	error:Creating an ndarray from ragged nested sequences \(which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes\) is deprecated.*
 	error:Invalid escape sequence
 	error:the matrix subclass is not the recommended way to represent matrices or deal with linear algebra
 	error:Passing (type, 1) or '1type' as a synonym of type is deprecated
