--- a/setup.cfg
+++ b/setup.cfg
@@ -75,6 +75,7 @@ filterwarnings =
 	error:Passing (type, 1) or '1type' as a synonym of type is deprecated
 	error:A builtin ctypes object gave a PEP3118:RuntimeWarning
 	error:Pickle, copy, and deepcopy support will be removed from itertools:DeprecationWarning
+	ignore:.*is not an MDF standard function, this is likely to produce an incompatible model.:UserWarning
 
 [pycodestyle]
 # for code explanation see https://pep8.readthedocs.io/en/latest/intro.html#error-codes
