OptimizationFunction: Wrap itertools.product in a generator
Itertools classes won't support copy or pickle starting in Python 3.14
Filter the associated DeprecationWarning.

Fixes ~5000 warnings in a full test run.

Signed-off-by: Jan Vesely <jan.vesely@rutgers.edu>

--- a/setup.cfg
+++ b/setup.cfg
@@ -74,6 +74,7 @@ filterwarnings =
 	error:the matrix subclass is not the recommended way to represent matrices or deal with linear algebra
 	error:Passing (type, 1) or '1type' as a synonym of type is deprecated
 	error:A builtin ctypes object gave a PEP3118:RuntimeWarning
+	error:Pickle, copy, and deepcopy support will be removed from itertools:DeprecationWarning
 
 [pycodestyle]
 # for code explanation see https://pep8.readthedocs.io/en/latest/intro.html#error-codes
