setup.cfg: fix deprecated keys
site-packages/setuptools/dist.py:493: SetuptoolsDeprecationWarning: Invalid dash-separated options

"By 2025-Mar-03, you need to update your project and remove deprecated
calls or your builds will no longer be supported. See
https://setuptools.pypa.io/en/latest/userguide/declarative_config.html"

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,8 +1,8 @@
 [bdist_wheel]
-python-tag = py3
+python_tag = py3
 
 [metadata]
-license_file = LICENSE.txt
+license_files = [LICENSE.txt]
 
 [tool:pytest]
 addopts =
