setup: include only psyneulink package in wheel
include library/models test results .json files because they need to be
present in the psyneulink install directory for external tests to use
them

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -8,3 +8,5 @@ recursive-include tests *.py
 recursive-include tutorial *.ipynb
 include versioneer.py
 include psyneulink/_version.py
+
+include psyneulink/library/models/results/*.json
