--- a/setup.cfg
+++ b/setup.cfg
@@ -125,3 +125,10 @@ versionfile_source = psyneulink/_version.py
 versionfile_build = psyneulink/_version.py
 tag_prefix = v
 parentdir_prefix = psyneulink-
+
+[options]
+include_package_data = True
+packages = find_namespace:
+
+[options.packages.find]
+include = psyneulink*
