setup.cfg: specify setuptools backend and dependencies

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,7 @@
+[build-system]
+requires = ["setuptools", "versioneer"]
+build-backend = "setuptools.build_meta"
+
 [bdist_wheel]
 python_tag = py3
 
