ci/ga: Don't build docs on update to the main CI job's description
Signed-off-by: Jan Vesely <jan.vesely@rutgers.edu>

--- a/.github/workflows/pnl-ci-docs.yml
+++ b/.github/workflows/pnl-ci-docs.yml
@@ -6,6 +6,8 @@ on:
       - 'dependabot/**'
     tags:
       - 'v*'
+    paths-ignore:
+      - '.github/workflows/pnl-ci.yml'
   pull_request:
 
 # run only the latest instance of this workflow job for the current branch/PR
