--- a/setup.cfg
+++ b/setup.cfg
@@ -79,6 +79,7 @@ filterwarnings =
 	error:Passing (type, 1) or '1type' as a synonym of type is deprecated
 	error:A builtin ctypes object gave a PEP3118:RuntimeWarning
 	error:Pickle, copy, and deepcopy support will be removed from itertools:DeprecationWarning
+	error:Benchmark fixture was not used at all in this test!
 	ignore:.*is not an MDF standard function, this is likely to produce an incompatible model.:UserWarning
 
 [pycodestyle]
