--- a/.github/workflows/pnl-ci-docs.yml
+++ b/.github/workflows/pnl-ci-docs.yml
@@ -77,9 +77,15 @@ jobs:
         python-version: ${{ matrix.python-version }}
 
     - name: Install Pandoc
+      shell: bash
       run: |
-        sudo apt-get update
-        sudo apt-get install -y pandoc
+        if [[ "$RUNNER_OS" == "Linux" ]]; then
+          sudo apt-get update && sudo apt-get install -y pandoc
+        elif [[ "$RUNNER_OS" == "macOS" ]]; then
+          brew install pandoc
+        elif [[ "$RUNNER_OS" == "Windows" ]]; then
+          choco install pandoc -y
+        fi
 
     - name: Get pip cache location
       shell: bash
