--- a/.github/workflows/pnl-ci-docs.yml
+++ b/.github/workflows/pnl-ci-docs.yml
@@ -19,6 +19,7 @@ concurrency:
 
 jobs:
   docs-build:
+
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
@@ -27,10 +28,13 @@ jobs:
         os: [ubuntu-latest, macos-latest, windows-latest]
         pnl-version: ${{ (github.event_name == 'push') && fromJSON('["head"]') || fromJSON('["head", "base"]') }}
         exclude:
+          # Exclude base versions other than linux
           - os: macos-latest
             pnl-version: 'base'
           - os: windows-latest
             pnl-version: 'base'
+
+          # Exclude base versions other than python 3.11
           - python-version: '3.8'
             pnl-version: 'base'
           - python-version: '3.9'
@@ -41,6 +45,17 @@ jobs:
             pnl-version: 'base'
           - python-version: '3.13'
             pnl-version: 'base'
+
+          # Use macos-14 instead of macos-latest for python 3.13.
+          # Newer image includes newer clang/llvm which fails to compile
+          # onnx-1.17.0, which doesn't provide python 3.13 wheels.
+          - python-version: '3.13'
+            os: macos-latest
+
+        include:
+          - python-version: '3.13'
+            os: macos-14
+            pnl-version: 'head'
 
     outputs:
       on_master: ${{ steps.on_master.outputs.on-branch }}
