--- a/.github/workflows/pnl-ci-docs.yml
+++ b/.github/workflows/pnl-ci-docs.yml
@@ -19,7 +19,6 @@ concurrency:
 
 jobs:
   docs-build:
-
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
@@ -29,22 +28,10 @@ jobs:
         pnl-version: ['head']
         include:
           # include base version for push events. In other events it includes
-          # an already matrix configuration which is ignored.
-          # DOCS_PYTHON_VERSION and DOCS_OS
+          # an existing matrix configuration which is ignored.
           - python-version: '3.11'
             os: 'ubuntu-latest'
             pnl-version: ${{ (github.event_name == 'push') && 'head' || 'base' }}
-
-          # Use macos-14 instead of macos-latest for python 3.13.
-          # Newer image includes newer clang/llvm which fails to compile
-          # onnx-1.17.0, which doesn't provide python 3.13 wheels.
-          - python-version: '3.13'
-            os: macos-14
-            pnl-version: 'head'
-
-        exclude:
-          - python-version: '3.13'
-            os: macos-latest
 
     outputs:
       on_master: ${{ steps.on_master.outputs.on-branch }}
